	Sys.getenv()/Sys.setenv().

    o	Sys.info() uses UTF-8 machine, login and user names.

    o	readClipboard() can read Unicode text (format = 13), and
	writeClipboard() can write it.

    o	file() and pipe() connections and the functions basename(),
	dir(), dirname(), dir.create(), DLL.version(), file.access(),
	file.copy(), file.create(), file.exists(), file.info(),
	file.remove(), file.rename(), getwd(), list.files(), load(),
	normalizePath(), path.expand(), save(), setwd(), shell(),
	shell.exec(), shortPathName(), Sys.chmod(), Sys.glob(),
	system() and unlink() have been converted to use Unicode
	filenames.

	Pathnames you select (choose.files, choose.dir, file.choose)
	are returned in UTF-8.

    o	Collating (e.g. <) and sorting is done in UTF-8 where one of
	the items is in UTF-8.  It seems that MSVCRT's collation
	order is different in widechar and in ASCII, so this
	can lead to inconsistencies.

    o	If readLines() or scan() is passed an unopened connection with
	a non-default 'encoding' argument, it will re-encode to UTF-8
	and declare the encoding on character columns.


TIME ZONES

    o	This version of R no longer makes use of Windows' bug-ridden
	concept of time zones but replaces it by Arthur Olson's
	public-domain tz database (which is widely used, including on
	Linux, Mac OS X, Solaris, AIX, FreeBSD and by Java and Tcl).
	This means that time zones should now be referred to by their
	'standard' names, and output correctly (e.g. not the incorrect
	'GMT Daylight Time' for 'British Summer Time' used by
	Windows).

    o	An attempt is made (once per session) to identify the current
	timezone from the Windows' Registry.  If this does not work or
	is incorrect, set the 'TZ' environment variable appropriately:
	a list of known timezones is given in
	R_HOME/share/zoneinfo/zones.tab (some alternative names will
	also be recognized).  (Thanks to Uwe Ligges for testing
	various versions on German versions of Windows: time zone